--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "An easy-to-read, quick reference for PHP best practices, accepted coding standards, and links to authoritative PHP tutorials around the Web"
+description: "Egy könnyen olvasható gyors referencia a PHP nyelv szépségeiről, az elfogadott kódolási irányelvekről és linkekkel, amik hasznos tartalmat adnak a temában tanulni vágyóknak."
 ---
 
 {% capture welcome_content %}{% include welcome.md %}{% endcapture %}
